Surface table rules banner to reflect live blackjack logistics

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <h1>BLACKJ Trainer</h1>
       <div class="badge">Ultra-Low-Latency</div>
     </div>
+    <div class="rule-strip">
+      6D • Dealer hits soft 17 • Blackjack 3:2 • Double after split • One split max • Split Aces one card • Insurance allowed • No surrender
+    </div>
 
     <section class="topline">
       <div class="panel count-block" data-role="rc">
