Add Move Guide panel with live basic strategy rationale

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       </div>
     </section>
 
+    <section class="guide panel">
+      <div class="label">Move Guide</div>
+      <div id="guideLine" class="guide-line">Waiting for cards…</div>
+    </section>
+
     <section id="grid" class="grid">
       <div class="card-target panel">
         <div class="sub-label">Target</div>
