Add clickable card pad, target buttons, and live move guidance visibility

--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
       <button id="resetBtn" type="button" class="control">Reset (X)</button>
     </section>
 
+    <section class="pad panel">
+      <div class="pad-row targets">
+        <span class="label">Target</span>
+        <div class="target-buttons">
+          <button class="chip-btn" data-target="player" id="btnPlayer">Player (P)</button>
+          <button class="chip-btn" data-target="dealer" id="btnDealer">Dealer (D)</button>
+          <button class="chip-btn" data-target="table" id="btnTable">Table (B)</button>
+        </div>
+      </div>
+      <div class="pad-row cards">
+        <span class="label">Add Card</span>
+        <div class="card-buttons">
+          <button class="chip-btn" data-rank="2">2</button>
+          <button class="chip-btn" data-rank="3">3</button>
+          <button class="chip-btn" data-rank="4">4</button>
+          <button class="chip-btn" data-rank="5">5</button>
+          <button class="chip-btn" data-rank="6">6</button>
+          <button class="chip-btn" data-rank="7">7</button>
+          <button class="chip-btn" data-rank="8">8</button>
+          <button class="chip-btn" data-rank="9">9</button>
+          <button class="chip-btn" data-rank="10">T</button>
+          <button class="chip-btn" data-rank="A">A</button>
+        </div>
+      </div>
+    </section>
+
     <section id="hints" class="hints">
       <div class="hint"><span class="mono">2-9, T/J/Q/K, A</span> add card to active target</div>
       <div class="hint"><span class="mono">P</span> player, <span class="mono">D</span> dealer, <span class="mono">B</span> table</div>
