Add toast feedback and basic index deviation notes in Move Guide

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
       </div>
     </section>
   </main>
+  <div id="toast" class="toast hidden"></div>
   <div id="perfHud" class="perf hidden">
     <div class="perf-line" id="perfFps">fps —</div>
     <div class="perf-line" id="perfFrames">frames —</div>
