Add Next Hand control (Enter) to clear hands and continue count

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <button id="hardcoreBtn" type="button" class="control">Hardcore (M)</button>
       <button id="perfBtn" type="button" class="control">Perf (F)</button>
       <button id="overlayBtn" type="button" class="control">Overlay (O)</button>
+      <button id="nextHandBtn" type="button" class="control">Next Hand (Enter)</button>
       <button id="resetBtn" type="button" class="control">Reset (X)</button>
     </section>
 
@@ -102,7 +103,7 @@
     <section id="hints" class="hints">
       <div class="hint"><span class="mono">2-9, T/J/Q/K, A</span> add card to active target</div>
       <div class="hint"><span class="mono">P</span> player, <span class="mono">D</span> dealer, <span class="mono">B</span> table</div>
-      <div class="hint"><span class="mono">Backspace</span> undo • <span class="mono">X</span> reset • <span class="mono">O</span> overlay • <span class="mono">E</span> edge/bet</div>
+      <div class="hint"><span class="mono">Backspace</span> undo • <span class="mono">Enter</span> next hand • <span class="mono">X</span> reset • <span class="mono">O</span> overlay • <span class="mono">E</span> edge/bet</div>
     </section>
 
     <section id="overlay" class="overlay hidden">
